[ 31-DEC-2018 ] Fixed compilation errors Integrated code for fixes done by GUI Team

--- a/src/app/modules/case/brass/brass.component.css
+++ b/src/app/modules/case/brass/brass.component.css
@@ -26,6 +26,10 @@ td{
   /* overflow: auto;      */
 }
 
+tr.mat-header-row{
+  height: 25px;
+}
+
 .responseTable{
   margin-left: 5px;
   width: 98.5%;
