--- a/src/app/modules/dialogs/hsia-dialog/hsia-dialog.component.html
+++ b/src/app/modules/dialogs/hsia-dialog/hsia-dialog.component.html
@@ -62,7 +62,7 @@
       </tr>
       <tr>
         <td><label>HSIA Error Description :</label></td>
-        <td><textarea class="hsiaErrDes" disabled="true">{{hsiaInfo.hsiaHeldOrdErrDes}}</textarea></td>
+        <td><textarea disabled="true">{{hsiaInfo.hsiaHeldOrdErrDes}}</textarea></td>
       </tr>
       <tr>
         <td><label>Source :</label></td>
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <td><label>Source Activity Name :</label></td>
-        <td><textarea class="srcActName" disabled="true">{{hsiaInfo.hsiaHeldSrcActName}}</textarea></td>
+        <td><textarea disabled="true">{{hsiaInfo.hsiaHeldSrcActName}}</textarea></td>
       </tr>
       <tr>
         <td><label>Fallout Ind :</label></td>
