--- a/src/app/modules/case/select-commitments/select-commitments.component.html
+++ b/src/app/modules/case/select-commitments/select-commitments.component.html
@@ -62,13 +62,13 @@
       <!-- Name Column -->
       <ng-container matColumnDef="Warning Date">
         <th mat-header-cell *matHeaderCellDef> Warning Date </th>
-        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.warningTime}} </td>
+        <td class="table-date" mat-cell *matCellDef="let selectCommit"> {{selectCommit.warningTime}} </td>
       </ng-container>
 
       <!-- Weight Column -->
       <ng-container matColumnDef="Commit Date">
         <th mat-header-cell *matHeaderCellDef> Commit Date </th>
-        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.schedCmpltime}} </td>
+        <td class="table-date" mat-cell *matCellDef="let selectCommit"> {{selectCommit.schedCmpltime}} </td>
       </ng-container>
 
       <!-- Symbol Column -->
@@ -79,12 +79,12 @@
 
       <ng-container matColumnDef="Original Date">
         <th mat-header-cell *matHeaderCellDef> Original Date </th>
-        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.xOrigTime}} </td>
+        <td class="table-date" mat-cell *matCellDef="let selectCommit"> {{selectCommit.xOrigTime}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Complete Date">
         <th mat-header-cell *matHeaderCellDef> Complete Date </th>
-        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.actCmpltime}} </td>
+        <td class="table-date" mat-cell *matCellDef="let selectCommit"> {{selectCommit.actCmpltime}} </td>
       </ng-container>
       <ng-container matColumnDef="Organization/Function">
         <th mat-header-cell *matHeaderCellDef> Organization/Function </th>
