--- a/src/app/modules/dialogs/yank-creation-dialog/yank-creation-dialog.component.css
+++ b/src/app/modules/dialogs/yank-creation-dialog/yank-creation-dialog.component.css
@@ -1,72 +1,33 @@
 mat-card{
     background: #3f51b5;
     padding: 3%;
-    width: 116%;
-    margin-left: -11%;
-    margin-top: -11%;
     color: white;
-}
-.yankEnter{
-    width: 22%;
-}
-table, tr, td{
-    height: 2%;;
-}
-.table2{
-  margin-top: -10%;
-}
-.table3{
-    width: 100%;
-    margin-top: -13%;
-}
-.table1{
-    margin-top: 2%;
+    width: 112%;
+    margin-left: -9%;
+    margin-top: -8%;
 }
 .yankInpt{
-    width: 89.5%;
-    margin-left: 8%;
+    margin-left: 14%;
+    width: 70%;
 }
 .yankDrop{
-    width: 90%;
-    margin-left: 2%;
+    margin-left: 8%;
+    width: 70%;
 }
 .yankBtn{
     float: right;
     height: 84%;
 }
-.table4{
-    width: 100%;
-}
-.idtd{
-    width: 2%;
-}
+
 .cancelBtn{
     height: 84%;
 }
-/* .yankDrop{
-    width: 72%;
-    float: right;
-    margin-top: -9%;
+.cancelRow{
+    margin-top: -8%;
 }
-.lblType{
-    margin-top: 1%;
+.enterId{
+    margin-top: 5%;
 }
-.labl-id{
-
-}
-.yankInpt{
-    width: 72%;
-    float: right;
-    margin-top: -14%;
-}
-
-.yankDiv{
-    margin-top: 10%;
-}
-.yankDiv2{
-    margin-top: 18%;
-} */
-
 
 
 
